--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "devDependencies": {
         "grunt": "~0.4.1",
-        "grunt-contrib-jst": "~0.5.0"
+        "grunt-contrib-jst": "~0.5.0",
+	"grunt-contrib-concat": "~0.5.0"
     }
 }
