--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-contrib-jst": "~0.5.0",
-	"grunt-contrib-concat": "~0.5.0"
+	"grunt-contrib-concat": "~0.5.0",
+	"grunt-contrib-uglify": "~0.7.0"
     }
 }
