--- a/cli/package.json
+++ b/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pastingio-cli",
+  "name": "pasting-dev",
   "version": "1.0.0",
   "description": "Command line tool to generate new paste on pasting.io",
   "keywords": [
@@ -21,11 +21,11 @@
   },
   "bugs": {
     "url": "https://blog.pasting.io",
-    "email" : "bugs@pasting.io"
+    "email" : "juan.sanzone@gmail.com"
   },
   "author": {
     "name": "Juan Sanzone",
-    "email": "juan@pasting.io",
+    "email": "juan.sanzone@gmail.com",
     "url": "http://pasting.io/"
   },
   "licenses": [
